--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             point
             and display their full name, point, and company name only.</small> <br>
 
-        <button id="task-1-btn"> Show Results</button> <button onsubmit="clearResults('task-1-result')"> Clear
+        <button id="task-1-btn"> Show Results</button> <button onclick="clearResults('task-1-result')"> Clear
             Results</button>
 
         <ol class="results" id="task-1-result"></ol>
@@ -30,7 +30,7 @@
         <small>Task description: Count how many users got more than 20 and less than 50 point and display the value
         </small> <br>
 
-        <button id="task-2-btn"> Show Results</button> <button onsubmit="clearResults('task-2-result')"> Clear
+        <button id="task-2-btn"> Show Results</button> <button onclick="clearResults('task-2-result')"> Clear
             Results</button>
 
 
@@ -45,7 +45,7 @@
             the users containing that point and display their email addresses.</small>
         <br>
 
-        <button id="task-3-btn"> Show Results</button> <button onsubmit="clearResults('task-3-result')"> Clear
+        <button id="task-3-btn"> Show Results</button> <button onclick="clearResults('task-3-result')"> Clear
             Results</button>
 
         <ol class="results" id="task-3-result"></ol>
